tmp-dev-full/objects/PromotionAccount__c/PromotionAccount__c.object-meta.xml
<CustomObject>
    <label>프로모션 매장</label>
    <nameField>
        <displayFormat>PRO_STORE{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>프로모션 매장 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>