tmp-dev-full/objects/PromotionAccount__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>매장 이름</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>프로모션 매장</relationshipLabel>
    <relationshipName>PromotionAccountId</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>