tmp-dev-full/objects/PromotionAccount__c/fields/BrandCode__c.field-meta.xml
<CustomField>
    <fullName>BrandCode__c</fullName>
    <label>브랜드 코드</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BrandCode</valueSetName>
    </valueSet>
</CustomField>