tmp-dev-full/objects/PromotionAccount__c/fields/InsertId__c.field-meta.xml
<CustomField>
    <fullName>InsertId__c</fullName>
    <label>등록자</label>
    <length>20</length>
    <type>Text</type>
</CustomField>