tmp-dev-full/objects/PromotionAccount__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>현재 사용 여부
사용 = true / 미사용 false</description>
    <label>사용 여부</label>
    <type>Checkbox</type>
</CustomField>