tmp-dev-full/objects/PromotionAccount__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>삭제 여부</label>
    <type>Checkbox</type>
</CustomField>