tmp-dev-full/objects/PromotionAccount__c/fields/PromotionId__c.field-meta.xml
<CustomField>
    <fullName>PromotionId__c</fullName>
    <label>설정 - 프로모션</label>
    <referenceTo>Promotion</referenceTo>
    <relationshipLabel>적용 가능 매장</relationshipLabel>
    <relationshipName>PromotionAccounId</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>